# FastAPI_Docker_ice-colder

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/: main.py
app/api/v1/controller/: message_manager.py  vmc.py  vmc_core.py  vmc_physical.py
app/api/v1/hardware/: mdb_payment_fsm.py
app/api/v1/web_interface/: routes.py  server.py
app/models/: config_test.py  state_model.py
app/services/: async_payment_fsm.py  config_store.py  fsm_intergration.py
