[project]
name = "ice-colder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "codeflash>=0.12.3",
    "fastapi[standard]>=0.115.11",
    "h11>=0.14.0",
    "loguru>=0.7.3",
    "phonenumbers>=9.0.5",
    "pillow>=11.1.0",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-extra-types>=2.10.5",
    "pydantic-settings>=2.10.0",
    "pyserial>=3.5",
    "qrcode>=8.1",
    "ruff>=0.11.2",
    "six>=1.17.0",
    "transitions>=0.9.2",
    "typing-extensions>=4.12.2",
    "typing-inspection>=0.4.1",
    "uvicorn>=0.34.0",
]

[tool.codeflash]
# All paths are relative to this pyproject.toml's directory.
module-root = "."
tests-root = "tests"
test-framework = "pytest"
benchmarks-root = "tests\\benchmarks"
ignore-paths = []
disable-telemetry = false
formatter-cmds = ["ruff check --exit-zero --fix $file", "ruff format $file"]
